refactor: update package.json for static adapter and adjust SEO metadata
- Changed adapter from '@sveltejs/adapter-auto' to '@sveltejs/adapter-static' in svelte.config.js for GitHub Pages deployment.
- Updated SEO meta tags in app.html, including canonical URLs and Open Graph images.
- Added prerendering support in +layout.js.
- Created .nojekyll file in static directory to prevent Jekyll processing on GitHub Pages.

--- a/src/app.html
+++ b/src/app.html
@@ -7,28 +7,28 @@
 		<!-- SEO Meta Tags -->
 		<title>Ajinkya Taranekar - Software Engineer | Full Stack Developer Portfolio</title>
 		<meta name="description" content="Ajinkya Taranekar's professional portfolio showcasing expertise in full-stack development, GenAI, modern web technologies, and innovative software solutions. Explore projects, experience, and technical skills." />
-		<meta name="keywords" content="Ajinkya Taranekar, Software Engineer, Full Stack Developer, Web Developer, GenAI, React, Node.js, TypeScript, Portfolio, SvelteKit" />
+		<meta name="keywords" content="Ajinkya Taranekar, Software Engineer, Full Stack Developer, Web Developer, GenAI, Svelte, Node.js, TypeScript, Portfolio, SvelteKit" />
 		<meta name="author" content="Ajinkya Taranekar" />
 		<meta name="robots" content="index, follow" />
-		<link rel="canonical" href="https://ajinkyataranekar.dev" />
+		<link rel="canonical" href="https://ajinkyataranekar.github.io" />
 		
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://ajinkyataranekar.dev" />
+		<meta property="og:url" content="https://ajinkyataranekar.github.io" />
 		<meta property="og:title" content="Ajinkya Taranekar - Software Engineer Portfolio" />
 		<meta property="og:description" content="Professional portfolio showcasing full-stack development expertise, innovative projects, and technical skills in modern web technologies." />
-		<meta property="og:image" content="https://ajinkyataranekar.dev/og-image.jpg" />
+		<meta property="og:image" content="https://ajinkyataranekar.github.io/profile.jpg" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
 		<meta property="og:site_name" content="Ajinkya Taranekar Portfolio" />
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:url" content="https://ajinkyataranekar.dev" />
+		<meta name="twitter:url" content="https://ajinkyataranekar.github.io" />
 		<meta name="twitter:title" content="Ajinkya Taranekar - Software Engineer Portfolio" />
 		<meta name="twitter:description" content="Professional portfolio showcasing full-stack development expertise and innovative projects." />
-		<meta name="twitter:image" content="https://ajinkyataranekar.dev/og-image.jpg" />
-		<meta name="twitter:creator" content="@ajinkyataranekar" />
+		<meta name="twitter:image" content="https://ajinkyataranekar.github.io/profile.jpg" />
+		<meta name="twitter:creator" content="@ajinkyataranekr" />
 		
 		<!-- Additional SEO -->
 		<meta name="theme-color" content="#003d80" />
@@ -42,15 +42,15 @@
 			"@context": "https://schema.org",
 			"@type": "Person",
 			"name": "Ajinkya Taranekar",
-			"url": "https://ajinkyataranekar.dev",
+			"url": "https://ajinkyataranekar.github.io",
 			"jobTitle": "Software Engineer",
 			"description": "Full Stack Developer specializing in modern web technologies and GenAI solutions",
 			"sameAs": [
 				"https://github.com/AjinkyaTaranekar",
 				"https://www.linkedin.com/in/ajinkya-taranekar",
-				"https://twitter.com/ajinkyataranekar"
+				"https://twitter.com/ajinkyataranekr"
 			],
-			"knowsAbout": ["Software Development", "Web Development", "Full Stack Development", "GenAI", "TypeScript", "React", "Node.js"]
+			"knowsAbout": ["Software Development", "Web Development", "Full Stack Development", "GenAI", "TypeScript", "Svelte", "Node.js"]
 		}
 		</script>
 		
