refactor: enhance styling and structure across components, update SEO metadata, and add QR code functionality

--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<!-- SEO Meta Tags -->
-		<title>Ajinkya Taranekar - Software Engineer | Full Stack Developer Portfolio</title>
-		<meta name="description" content="Ajinkya Taranekar's professional portfolio showcasing expertise in full-stack development, GenAI, modern web technologies, and innovative software solutions. Explore projects, experience, and technical skills." />
+		<title>Ajinkya Taranekar - Software Engineer</title>
+		<meta name="description" content="Results-driven Software Engineer with 3+ years of experience architecting scalable, data-intensive applications and leading cross-functional teams. Specializing in full-stack development, GenAI integration, and cloud platforms." />
 		<meta name="keywords" content="Ajinkya Taranekar, Software Engineer, Full Stack Developer, Web Developer, GenAI, Svelte, Node.js, TypeScript, Portfolio, SvelteKit" />
 		<meta name="author" content="Ajinkya Taranekar" />
 		<meta name="robots" content="index, follow" />
@@ -15,9 +15,9 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://ajinkyataranekar.github.io" />
-		<meta property="og:title" content="Ajinkya Taranekar - Software Engineer Portfolio" />
-		<meta property="og:description" content="Professional portfolio showcasing full-stack development expertise, innovative projects, and technical skills in modern web technologies." />
-		<meta property="og:image" content="https://ajinkyataranekar.github.io/profile.jpg" />
+		<meta property="og:title" content="Ajinkya Taranekar - Software Engineer" />
+		<meta property="og:description" content="Results-driven Software Engineer with experience in full-stack development, GenAI integration, and microservices architecture. Currently pursuing MSc Computer Science at Trinity College Dublin." />
+		<meta property="og:image" content="https://ajinkyataranekar.github.io/assets/profile.jpg" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
 		<meta property="og:site_name" content="Ajinkya Taranekar Portfolio" />
@@ -26,8 +26,8 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:url" content="https://ajinkyataranekar.github.io" />
 		<meta name="twitter:title" content="Ajinkya Taranekar - Software Engineer Portfolio" />
-		<meta name="twitter:description" content="Professional portfolio showcasing full-stack development expertise and innovative projects." />
-		<meta name="twitter:image" content="https://ajinkyataranekar.github.io/profile.jpg" />
+		<meta name="twitter:description" content="Results-driven Software Engineer specializing in full-stack development, GenAI frameworks, and cloud platforms with a track record of reducing system latencies by 90%." />
+		<meta name="twitter:image" content="https://ajinkyataranekar.github.io/assets/profile.jpg" />
 		<meta name="twitter:creator" content="@ajinkyataranekr" />
 		
 		<!-- Additional SEO -->
