fix: update job title and tagline for consistency in portfolio data

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<!-- SEO Meta Tags -->
 		<title>Ajinkya Taranekar - Software Engineer</title>
 		<meta name="description" content="Results-driven Software Engineer with 3+ years of experience architecting scalable, data-intensive applications and leading cross-functional teams. Specializing in full-stack development, GenAI integration, and cloud platforms." />
-		<meta name="keywords" content="Ajinkya Taranekar, Software Engineer, Full Stack Developer, Web Developer, GenAI, Svelte, Node.js, TypeScript, Portfolio, SvelteKit" />
+		<meta name="keywords" content="Ajinkya Taranekar, Software Engineer, Full Stack Engineer, Web Developer, GenAI, Svelte, Node.js, TypeScript, Portfolio, SvelteKit" />
 		<meta name="author" content="Ajinkya Taranekar" />
 		<meta name="robots" content="index, follow" />
 		<link rel="canonical" href="https://ajinkyataranekar.github.io" />
@@ -44,7 +44,7 @@
 			"name": "Ajinkya Taranekar",
 			"url": "https://ajinkyataranekar.github.io",
 			"jobTitle": "Software Engineer",
-			"description": "Full Stack Developer specializing in modern web technologies and GenAI solutions",
+			"description": "Full Stack Engineer specializing in modern web technologies and GenAI solutions",
 			"sameAs": [
 				"https://github.com/AjinkyaTaranekar",
 				"https://www.linkedin.com/in/ajinkya-taranekar",
