fix: add Google site verification meta tag

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 		<meta name="description" content="Results-driven Software Engineer with 3+ years of experience architecting scalable, data-intensive applications and leading cross-functional teams. Specializing in full-stack development, GenAI integration, and cloud platforms." />
 		<meta name="keywords" content="Ajinkya Taranekar, Software Engineer, Full Stack Engineer, Web Developer, GenAI, Svelte, Node.js, TypeScript, Portfolio, SvelteKit" />
 		<meta name="author" content="Ajinkya Taranekar" />
+		<meta name="google-site-verification" content="TDynlOLae4AfEw94yQ19d7dYHnyQBXQdN0plCUFcnEY" />
 		<meta name="robots" content="index, follow" />
 		<link rel="canonical" href="https://ajinkyataranekar.github.io" />
 		
