feat: add Google Analytics tracking script for improved site analytics

--- a/src/app.html
+++ b/src/app.html
@@ -54,6 +54,16 @@
 			"knowsAbout": ["Software Development", "Web Development", "Full Stack Development", "GenAI", "TypeScript", "Svelte", "Node.js"]
 		}
 		</script>
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-H4R14CS9JE"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-H4R14CS9JE');
+		</script>
 		
 		%sveltekit.head%
 	</head>
